--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,15 @@
-# Compiled class file
-*.class
+# OS and temp related
+.DS_Store
+*~
+.*.swp
 
-# Log file
-*.log
+# Eclipse related
+.settings
+.project
+.classpath
 
-# BlueJ files
-*.ctxt
+# build files
+bin
+build
+target
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
