--- a/pom.xml
+++ b/pom.xml
@@ -2,16 +2,74 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>bifurcation</groupId>
   <artifactId>bifurcation</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>v0.0.1</version>
+
+	<properties>
+		<project.java.version>1.6</project.java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+
+	<repositories>
+		<repository>
+			<id>ginsim_snapshot</id>
+			<snapshots><enabled>true</enabled></snapshots>
+			<releases><enabled>false</enabled></releases>
+			<name>GINsim snapshot repository</name>
+			<url>http://ginsim.org/maven/snapshot</url>
+		</repository>
+	</repositories>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.colomoto</groupId>
+			<artifactId>bioLQM</artifactId>
+			<version>0.6-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
+
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>org.colomoto.lparam.Play</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<includeScope>runtime</includeScope>
+							<excludeScope>provided</excludeScope>
+							<outputDirectory>${project.build.directory}/lib</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+					<source>${project.java.version}</source>
+					<target>${project.java.version}</target>
         </configuration>
       </plugin>
     </plugins>
