--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>bifurcation</groupId>
   <artifactId>bifurcation</artifactId>
-  <version>v0.0.1</version>
+  <version>v0.1.0</version>
 
 	<properties>
 		<project.java.version>1.6</project.java.version>
@@ -26,22 +26,53 @@
 			<artifactId>bioLQM</artifactId>
 			<version>0.6-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.ginsim</groupId>
+			<artifactId>GINsim</artifactId>
+			<version>3.0.0b-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
   <build>
     <sourceDirectory>src</sourceDirectory>
+
     <plugins>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>org.colomoto.lparam.Play</mainClass>
+							<mainClass>org.colomoto.lparam.Launcher</mainClass>
 						</manifest>
 					</archive>
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
+							<useUniqueVersions>false</useUniqueVersions>
+							<mainClass>org.colomoto.lparam.Launcher</mainClass>
+						</manifest>
+					</archive>
 				</configuration>
 			</plugin>
 
